--- a/composer.json
+++ b/composer.json
@@ -17,32 +17,34 @@
         "bin-dir": "bin"
     },
     "require": {
-        "neos/neos-development-collection": "@dev",
-        "neos/flow-development-collection": "@dev",
+        "neos/neos-development-collection": "3.0.x-dev",
+        "neos/flow-development-collection": "4.0.x-dev",
+
         "ttree/swissconfederation-webstarter": "@dev",
+        "ttree/fusion-documentfinder": "@dev",
+        "ttree/fusion-canrender": "@dev",
 
-        "typo3/party": "@dev",
+        "neos/party": "@dev",
 
-        "typo3/imagine": "@dev",
-        "typo3/twitter-bootstrap": "@dev",
+        "neos/imagine": "@dev",
+        "neos/twitter-bootstrap": "@dev",
 
-        "typo3/form": "@dev",
-        "typo3/setup": "@dev",
+        "neos/form": "@dev",
+        "neos/setup": "@dev",
 
-        "typo3/buildessentials": "3.2.x-dev",
+        "neos/buildessentials": "4.0.x-dev",
 
         "mikey179/vfsstream": "~1.6",
         "phpunit/phpunit": "~4.8 || ~5.4.0",
-        "symfony/css-selector": "~2.0",
-        "flowpack/behat": "dev-master"
+        "symfony/css-selector": "~2.0"
     },
     "suggest": {
         "ext-pdo_sqlite": "For running functional tests out-of-the-box this is required"
     },
     "scripts": {
-        "post-update-cmd": "TYPO3\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
-        "post-install-cmd": "TYPO3\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
-        "post-package-update": "TYPO3\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
-        "post-package-install": "TYPO3\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall"
+        "post-update-cmd": "Neos\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
+        "post-install-cmd": "Neos\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
+        "post-package-update": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
+        "post-package-install": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall"
     }
 }
