--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         {
             "type": "git",
             "url": "ssh://git@github.com/ttreeagency/SwissConfederation.WebStarter.git"
+        },
+        {
+            "type": "git",
+            "url": "ssh://git@github.com/dfeyer/neos-development-collection.git"
         }
     ],
     "config": {
@@ -17,13 +21,14 @@
         "bin-dir": "bin"
     },
     "require": {
-        "neos/neos-development-collection": "3.0.x-dev",
+        "neos/neos-development-collection": "dev-feature-fusion-custommeta as 3.0.x-dev",
         "neos/flow-development-collection": "4.0.x-dev",
 
         "ttree/swissconfederation-webstarter": "@dev",
         "ttree/fusion-documentfinder": "@dev",
         "ttree/fusion-canrender": "@dev",
         "ttree/stylesheet": "@dev",
+        "ttree/fusion-dynamicstyles": "@dev",
 
         "neos/party": "@dev",
 
@@ -37,7 +42,8 @@
 
         "mikey179/vfsstream": "~1.6",
         "phpunit/phpunit": "~4.8 || ~5.4.0",
-        "symfony/css-selector": "~2.0"
+        "symfony/css-selector": "~2.0",
+        "matthiasmullie/minify": "^1.3"
     },
     "suggest": {
         "ext-pdo_sqlite": "For running functional tests out-of-the-box this is required"
